# Lyrecs

./: .editorconfig  .gitignore  README.md  package.json  vite.config.ts
.VSCodeCounter/2022-07-11_14-53-41/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  settings.yml  tauri.conf.json
src-tauri/bindings/: README.md  build.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  config.rs  main.rs  tauri_command.rs
src-tauri/src/api/: connect.rs  lyric_line.rs  mod.rs  model.rs  search.rs
src-tauri/src/app/: mod.rs  setting.rs  tray.rs  window.rs
src-tauri/src/get_lyrics/: cache.rs  genius.rs  kugou.rs  lyric_file.rs  mod.rs  netease.rs  song.rs  song_struct.rs
src-tauri/src/get_lyrics/kugou/: get_lyrics.rs  mod.rs  model.rs
src-tauri/src/get_lyrics/netease/: get_lyrics.rs  mod.rs  model.rs
src-tauri/src/get_lyrics/qq/: get_lyrics.rs  mod.rs  model.rs
src-tauri/src/parse_lyric/: lrcx_parser.rs  mod.rs  parser.rs  utils.rs
src-tauri/src/player_info/: link_system.rs  mod.rs  windows.rs
src/pages/: displayer.tsx  search.tsx  setting.tsx
