[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[env]
RUST_BACKTRACE=1

[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.3", features = ["api-all", "macos-private-api", "system-tray"] }
window-vibrancy = "0.1.3"
window-shadows = "0.1.3"
reqwest = { version = "0.11", features = [ "json"] }
anyhow = "1"
directories = "4"
async-recursion = "1.0.0"
regex = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
lazy_static = "1.4.0"
env_logger = "0.9.0"
strsim = "0.10.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.38.0",features = [
    "Media_Control",
    "Media_Playback",
    "Foundation",
] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
